--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "jamocracy",
+  "name": "test",
   "version": "1.0.0",
-  "description": "des",
+  "description": "",
   "main": "index.js",
+  "dependencies": {
+    "twilio": "^2.5.1",
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3",
+    "compression": "^1.6.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.14.1",
-    "express": "^4.13.3",
-    "twilio": "^2.5.1"
-  },
-  "devDependencies": {}
+  "author": "michael krumdick",
+  "license": "ISC"
 }
