--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.14.1",
     "compression": "^1.6.0",
     "express": "^4.13.3",
+    "spotify-web-api-node": "^2.2.0",
     "twilio": "^2.5.1"
   },
   "devDependencies": {},
