--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "spotify-web-api-node": "^2.2.0",
     "twilio": "^2.5.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "*",
+    "eslint-config-google": "^0.6.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
