--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "twilio": "^2.5.1"
   },
   "devDependencies": {
-    "eslint": "*",
-    "eslint-config-google": "^0.6.0"
+    "eslint": "*"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint app.js"
   },
   "author": "michael krumdick",
   "license": "ISC",
