--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,10 @@
         "no-console": "off",
         "no-const-assign": "error",
         "no-negated-condition": "error",
+        "no-unneeded-ternary": "error",
         "no-var": "error",
+        "one-var": "error",
+        "operator-assignment": "error",
         "prefer-arrow-callback": "error",
         "prefer-const": "error",
         "quotes": [
@@ -36,6 +39,7 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "space-infix-ops": "error"
     }
 }
