--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "twilio": "^2.5.1"
   },
   "devDependencies": {
-    "eslint": "*"
+    "eslint": "*",
+    "expect.js": "^0.3.1",
+    "mocha": "^2.5.3",
+    "mockery": "^1.7.0",
+    "supertest": "^1.2.0"
   },
   "scripts": {
     "test": "eslint app.js routes/*.js services/*.js"
