--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "supertest": "^1.2.0"
   },
   "scripts": {
-    "test": "eslint app.js routes/*.js services/*.js"
+    "test": "make test"
   },
   "author": "michael krumdick",
   "license": "ISC",
