--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "compression": "^1.6.0",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
-    "orchestrate": "^0.6.0",
+    "mongodb": "^2.2.26",
     "request": "^2.65.0",
     "spotify-web-api-node": "^2.2.0",
     "twilio": "^2.5.1"
